# rpa_gerador_relatorio

./: .gitignore  Dockerfile  README.md  TODO.md  Teste.md  config.json  pyproject.toml  requirements.txt
data_example/: colunas_1vendas_especificas_2025-04-01 00:00:00.csv  colunas_2vendas_especificas_2025-04-01 00:00:00.csv  create_sales_csv.py  vendas_especificas.csv  vendas_especificas_data_inicio.csv
docs/adr/: adr.md
docs/prd/: prd.md
gerador_relatorio/: config.json  main.py
gerador_relatorio/data_source/: data_source.py  web_data_source.py
gerador_relatorio/report_config/: report_config.py
gerador_relatorio/sales_data/: sales_data.py
gerador_relatorio/sales_report/: csv_report_formatter.py  html_report_formatter.py  report_formatter.py  sales_report.py  text_report_formatter.py
gerador_relatorios/: main.py
gerador_relatorios/report_config/: report_config.py
gerador_relatorios/sales_data/: sales_data.py
gerador_relatorios/sales_report/: html_report_formatter.py  report_formatter.py  sales_report.py  text_report_formatter.py
tests/: test_csv_report_formatter.py  test_data_source.py  test_main.py  test_sales_data.py
