[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gerador_relatorios"
version = "0.1.0"
authors = [{name ='Luiz Salmoonson',email='lhfsalmonson@gmail.com'},
]
description = "Gerador de Relatorios de Vendas"
readme = "README.md"
requires-python = ">=3.8"   
classifiers = [
    "Programming Language :: Python :: 3", 
]
dependencies = []  # Suas dependencias (se houver)

[project.scripts]
gerar_relatorio = "main:main"

[tool.setuptools.packages.find]
where = ["."]  # Onde procurar pacotes